# log-generatorr

./: Cargo.toml  LICENSE  README.md
src/: generator.rs  index.html  main.rs  messages.rs  rotation.rs  server.rs
