[package]
name = "log-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio-util = "0.7"
